                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 03-03-2006 added: "Clear Default" to the root bookmark context menu
 - 03-03-2006 fixed: album lookups with a single 100% match in the list
 - 03-03-2006 changed: file manager, a new folder is now highlighted as current item after it is created
 - 03-03-2006 fixed: music nav, after getting album information the thumb of the item is not updated
 - 03-03-2006 changed: music nav, genres, artists and albums are not cached to disc anymore
 - 03-03-2006 fixed: music nav, a cached dir in does not show the parent folder item
 - 02-03-2006 fixed: Musicdatabase paths weren't compared case-insensitive (albums + songs could double up if scanned from 2 different cased bookmarks)
 - 02-03-2006 changed: Overlay images are rendered in bottom right of thumb only.  Image is sized so that it is the normal size in Big Thumbs view, and is scaled for normal thumb views.
 - 02-03-2006 fixed: Possible crashes setting things such as default bookmark.
 - 02-03-2006 changed: Rewrote the ShowIMDB function.  Now any existing thumbnails will be used in the Show Information dialog.
 - 02-03-2006 changed: 'query info for all files' in my video now ignore sample/ folder.
 - 02-03-2006 fixed: Mark as Watched, Mark as Unwatched, Remove Title, Edit Title for Movies in the database
 - 02-03-2006 added: System.XboxNickname infolabel
 - 02-03-2006 fixed:[ 1378214 ] Nickname.xbn
 - 02-03-2006 added: seperate track formatting options for the music now playing window.  (found in settings->music->playlist)
 - 02-03-2006 updated: completely rewritten party mode manager, new features: